fix: under header contrast on author and tag pages

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -143,6 +143,11 @@ html.dark-mode body {
   color: var(--primary-background);
 }
 
+html.dark-mode .under-header-content {
+  background-color: var(--primary-background);
+  color: var(--secondary-color);
+}
+
 .site-title {
   z-index: 10;
   margin: 0;
